name:                user-validation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/user-validation#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Mada
maintainer:          mada.patrik@gmail.com
copyright:           2021 Patrik Mada
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable user-validation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , validation
